latte/tests/bad/type/func/invalid_ret_type.lat
A f() {}

int main() {
  return 0;
}
